--- a/src/main/resources/edu/shu/nlp/skytorif/utils/para.properties
+++ b/src/main/resources/edu/shu/nlp/skytorif/utils/para.properties
@@ -1,6 +1,6 @@
-pixelNumbers = 51
+pixelNumbers = 30
 srcImagePath = C:\\Users\\Administrator\\Desktop\\image\\f.jpg
-toImagePath = C:\\Users\\Administrator\\Desktop\\f_${pixelNumbers}.jpg
+toImagePath = C:\\Users\\Administrator\\Desktop\\f_{0}.jpg
 logo_point_x = 378
 logo_point_y = 283
 logo_width = 100
