--- a/src/main/resources/edu/shu/nlp/skytorif/utils/para.properties
+++ b/src/main/resources/edu/shu/nlp/skytorif/utils/para.properties
@@ -1,5 +1,5 @@
 pixelNumbers = 30
-srcImagePath = C:\\Users\\Administrator\\Desktop\\image\\f.jpg
+srcImagePath = C:\\Users\\Administrator\\Desktop\\image\\h.jpg
 toImagePath = C:\\Users\\Administrator\\Desktop\\f_{0}.jpg
 logo_point_x = 378
 logo_point_y = 283
