--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <junit.version>4.12</junit.version>
     <log4j-slf4j-impl.version>2.5</log4j-slf4j-impl.version>
     <log4j-core.version>2.5</log4j-core.version>
+    <zxing-core.version>3.2.1</zxing-core.version>
   </properties>
 
   <dependencies>
@@ -33,6 +34,11 @@
 	    <groupId>org.apache.logging.log4j</groupId>
 	    <artifactId>log4j-core</artifactId>
 	    <version>${log4j-core.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.google.zxing</groupId>
+	    <artifactId>core</artifactId>
+	    <version>${zxing-core.version}</version>
 	</dependency>
   </dependencies>
 </project>
